<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.QueryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <com.mancj.materialsearchbar.MaterialSearchBar
                android:id="@+id/search_bar"
                style="@style/MaterialSearchBarLight"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:mt_speechMode="false"
                app:mt_navIconEnabled="false"
                app:mt_hint="@string/query_hint"
                app:mt_placeholder="@string/query_placeholder"
                app:mt_maxSuggestionsCount="5" />


    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:orientation="vertical"
        android:id="@+id/ready_to_replace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.example.jianhan.widget.LoadMoreRecyclerView
            android:id="@+id/query_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/perv_show_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/pre_show_text"
            android:textColor="@color/gray_deep"/>

        <ProgressBar
            android:id="@+id/query_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>


    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
